--- a/layouts/partials/head/style.html
+++ b/layouts/partials/head/style.html
@@ -1,3 +1,4 @@
 {{ $sass := resources.Get "scss/style.scss" }}
 {{ $style := $sass | resources.ToCSS | minify }}
+{{- partial "helper/external" (dict "Context" . "Namespace" "FontAwesome") -}}
 <link rel="stylesheet" href="{{ $style.RelPermalink }}">
