--- a/layouts/partials/sidebar/left.html
+++ b/layouts/partials/sidebar/left.html
@@ -37,10 +37,7 @@
         {{ $active := or (eq $currentPage.Title .Name) (or ($currentPage.HasMenuCurrent "main" .) ($currentPage.IsMenuCurrent "main" .)) }}
 
         <li {{ if $active }} class='current' {{ end }}>
-            <a href='{{ .URL }}'>
-                {{ if .Pre }}
-                    {{ partial "helper/icon" .Pre }}
-                {{ end }}
+            <a href='{{ .URL }}' {{ if .Pre }} class='fas fa-{{- .Pre -}}' {{ end }}>
                 <span>{{- .Name -}}</span>
             </a>
         </li>
