--- a/layouts/partials/article/components/footer.html
+++ b/layouts/partials/article/components/footer.html
@@ -12,7 +12,7 @@
     <section class="article-time">
         {{ partial "helper/icon" "clock" }}
         <span class="article-time--modified">
-            {{ T "article.lastUpdatedOn" }} {{ .Lastmod.Format ( or .Site.Params.dateFormat.lastUpdated "Jan 02, 2006 15:04 MST" ) }}
+            {{ T "article.lastUpdatedOn" }} {{ index $.Site.Data.days (dateFormat "Monday" .Lastmod) }}, {{ .Lastmod.Day }} {{ index $.Site.Data.months (printf "%d" .Lastmod.Month) }} {{ .Lastmod.Year }}
         </span>
     </section>
     {{- end -}}
