--- a/layouts/partials/sidebar/left.html
+++ b/layouts/partials/sidebar/left.html
@@ -38,7 +38,7 @@
 
         <li {{ if $active }} class='current' {{ end }}>
             <a href='{{ .URL }}'>
-                <span>{{ if .Pre }}<i class='fas fa-{{- .Pre -}}'></i>{{ end }} {{- .Name -}}</span>
+                {{ if .Pre }}<i class='fas fa-{{- .Pre -}}' style='margin-right: 5px;'></i>{{ end }}<span>{{- .Name -}}</span>
             </a>
         </li>
         {{ end }}
