--- a/assets/scss/partials/sidebar.scss
+++ b/assets/scss/partials/sidebar.scss
@@ -75,6 +75,8 @@
             height: 100%;
             border-radius: 100%;
             box-shadow: var(--shadow-l1);
+			margin: 1px;
+			background-color: white;
         }
 
         .emoji {
